fixed dark mode

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -113,7 +113,7 @@
 #buttonAnimation {
   text-align: center;
   height: 5vh;
-  width: 20vw;
+  width: fit-content;
   font-weight: 900;
   font-size: 120%;
   position: relative;
